// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Navigation/ErrorPages/Auth Default 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-fWSCIC cCOjbT sc-error-pageauth"
  >
    <div
      className="sc-aemoO kefQZX"
    >
      <i
        className="sc-jONnTn eiuOmP fas fa-info-circle fa-2x"
      />
      <h2
        className="sc-dwfUOf fzTEna"
      >
        Authenticating...
      </h2>
    </div>
    <div
      className="sc-aemoO kefQZX"
    >
      <div
        className="sc-TmcTc lcwSLq"
      >
        <p
          className="sc-jHVexB fJqmfB"
        >
          The authentication is in progress.
        </p>
        <p
          className="sc-jHVexB fJqmfB"
        >
          If this message persist please try refreshing your page.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Navigation/ErrorPages/Auth With Locale 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-fWSCIC cCOjbT sc-error-pageauth"
  >
    <div
      className="sc-aemoO kefQZX"
    >
      <i
        className="sc-jONnTn eiuOmP fas fa-info-circle fa-2x"
      />
      <h2
        className="sc-dwfUOf fzTEna"
      >
        Authentification
      </h2>
    </div>
    <div
      className="sc-aemoO kefQZX"
    >
      <div
        className="sc-TmcTc lcwSLq"
      >
        <p
          className="sc-jHVexB fJqmfB"
        >
          Authentification en cours.
        </p>
        <p
          className="sc-jHVexB fJqmfB"
        >
          Si ce message persiste, vous pouvez essayer d'actualiser cette page.
        </p>
        <p
          className="sc-jHVexB fJqmfB"
        >
          Vous pouvez également contacter le 
          <a
            className="sc-hlTvYk kZoAaN"
            href="https://www.scality.com/support/"
          >
            support 
            <i
              className="fas fa-external-link-alt"
            />
          </a>
           pour signaler ce problème.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Navigation/ErrorPages/Auth With Support Link 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-fWSCIC cCOjbT sc-error-pageauth"
  >
    <div
      className="sc-aemoO kefQZX"
    >
      <i
        className="sc-jONnTn eiuOmP fas fa-info-circle fa-2x"
      />
      <h2
        className="sc-dwfUOf fzTEna"
      >
        Authenticating...
      </h2>
    </div>
    <div
      className="sc-aemoO kefQZX"
    >
      <div
        className="sc-TmcTc lcwSLq"
      >
        <p
          className="sc-jHVexB fJqmfB"
        >
          The authentication is in progress.
        </p>
        <p
          className="sc-jHVexB fJqmfB"
        >
          If this message persist please try refreshing your page.
        </p>
        <p
          className="sc-jHVexB fJqmfB"
        >
          You may also contact 
          <a
            className="sc-hlTvYk kZoAaN"
            href="https://www.scality.com/support/"
          >
            support 
            <i
              className="fas fa-external-link-alt"
            />
          </a>
           to report this issue.
        </p>
      </div>
    </div>
  </div>
</div>
`;
